# gStore

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_ZH.md  conanfile.py
api/http/cpp/example/: Benchmark.cpp  GET-example.cpp  POST-example.cpp  Transaction-example.cpp
api/http/cpp/src/: GstoreConnector.cpp  GstoreConnector.h  Makefile
api/http/java/example/: Benchmark.java  GETexample.java  POSTexample.java
api/http/java/src/jgsc/: GstoreConnector.java
api/http/nodejs/example/: GET-example.js  POST-example.js
api/http/nodejs/src/: GstoreConnector.js
api/http/php/example/: Benchmark.php  GET-example.php  POST-example.php
api/http/php/src/: GstoreConnector.php
api/http/python/example/: Benchmark.py  GET-example.py  POST-example.py
api/http/python/src/: GstoreConnector.py
api/socket/cpp/example/: Makefile
api/socket/cpp/src/: Client.h  Makefile
conf/: conf.ini  init.conf  slog.properties  slog.stdout.properties
docs/: COMPILE.md  INSTALL.md
docs/en-us/: API_USAGE.md  BUGS.md  CHRONOLOGY.md  CLOUD_INTRODUCE.md  DEMAND.md  DOCKER_DEPLOY_EN.md  DOCUMENT_DOWNLOAD.md  GRAPH_INTRODUCE.md  GSTORE_LOGO.md  INSTALL_INSTRUCT.md  LEGAL_PROVISION.md  QUICK_START.md  SPARQL_QUERY.md  UPDATE_LOG.md  WORKBENCH_USAGE.md  _navbar.md  _sidebar.md
docs/zh-cn/: API_USAGE.md  BUGS.md  CHRONOLOGY.md  CLOUD_INTRODUCE.md  COMPILE.md  DEMAND.md  DOCKER_DEPLOY_CN.md  DOCUMENT_DOWNLOAD.md  FAQ.md  GRAPH_INTRODUCE.md  GSTORE_LOGO.md  INSTALL_INSTRUCT.md  LEGAL_PROVISION.md  QUICK_START.md  README.md  SPARQL_QUERY.md  UPDATE_LOG.md  WORKBENCH_USAGE.md  custom.css  index.html
scripts/: APIexample.sh  build.sh  docker-entrypoint.sh  static.sh  version_checkout.sh  version_update.sh
scripts/setup/: setup_centos.sh  setup_ubuntu.sh
scripts/test/: CMakeLists.txt  basic_test.sh  gtest.cpp  parser_test.sh  test.sh  update_test.cpp
src/: CMakeLists.txt
src/Api/: APIUtil.cpp  APIUtil.h  CMakeLists.txt  HttpUtil.cpp  HttpUtil.h  PFNUtil.cpp  PFNUtil.h
src/Database/: CMakeLists.txt  CSR.cpp  Database.cpp  Database.h  Executor.cpp  Join.cpp  Optimizer.cpp  PlanGenerator.cpp  PlanTree.cpp  Strategy.cpp  TableOperator.cpp  TableOperator.h  Txn_manager.cpp
src/GRPC/: CMakeLists.txt  grpc_message.cpp  grpc_operation.h  grpc_server.cpp
src/KVstore/: CMakeLists.txt  KVstore.cpp  KVstore.h
src/KVstore/ISArray/: ISArray.cpp  ISBlockManager.cpp
src/KVstore/ISTree/: ISTree.cpp
src/KVstore/ISTree/heap/: ISHeap.cpp
src/KVstore/ISTree/node/: ISLeafNode.cpp
src/KVstore/ISTree/storage/: ISStorage.cpp
src/KVstore/IVArray/: IVArray.cpp  IVBlockManager.cpp  IVEntry.cpp  IVEntry.h
src/KVstore/IVTree/: IVTree.cpp
src/KVstore/IVTree/heap/: IVHeap.cpp
src/KVstore/IVTree/node/: IVLeafNode.cpp  IVNode.h
src/KVstore/IVTree/storage/: IVStorage.cpp
src/KVstore/SITree/: SITree.cpp
src/KVstore/SITree/heap/: SIHeap.cpp
src/KVstore/SITree/node/: SIIntlNode.cpp  SILeafNode.cpp  SINode.cpp
src/KVstore/SITree/storage/: SIStorage.cpp
src/Main/: CMakeLists.txt  gadd.cpp  gapiserver.cpp  gbackup.cpp  gbuild.cpp  gconsole.cpp  gdrop.cpp  gexport.cpp  ghttp.cpp  ginit.cpp  gmonitor.cpp  gquery.cpp  greason.cpp  grestore.cpp  grpc.cpp  gsub.cpp  rollback.cpp  shutdown.cpp
src/Parser/: CMakeLists.txt  QueryParser.cpp  RDFParser.cpp
src/Parser/SPARQL/: SPARQL.g4  SPARQL.interp  SPARQLLexer.cpp  SPARQLLexer.h  SPARQLLexer.interp  SPARQLLexer.tokens  SPARQLParser.cpp  SPARQLParser.h
src/Query/: CMakeLists.txt  GeneralEvaluation.cpp  GeneralEvaluation.h  IDList.cpp  PathQueryHandler.cpp  QueryTree.cpp  QueryTree.h  ResultSet.cpp  ResultSet.h  SPARQLquery.cpp  TempResult.cpp  TempResult.h  Varset.cpp
src/Query/Algorithm/: IC14.cpp  JaccardSimilarity.cpp  PR.cpp  PathQueryHandler.cpp  PathQueryHandler.h  SSPPR.cpp  SSSP.cpp  SSSPLen.cpp  WCC.cpp  betweennessCentrality.cpp  bfsCount.cpp  closenessCentrality.cpp  clusteringCoeff.cpp  cycle.cpp  degreeCorrelation.cpp  diameterEstimation.cpp  kHopEnumeratePath.cpp  kHopNeighbor.cpp  kHopReachable.cpp  labelProp.cpp  louvain.cpp  shortestPath.cpp  shortestPathCount.cpp  triangleCounting.cpp
src/Query/topk/: DPBTopKUtil.cpp
src/Reason/: CMakeLists.txt  Reason.cpp  Reason.h
src/Server/: CMakeLists.txt  Socket.h
src/Signature/: CMakeLists.txt
src/StringIndex/: CMakeLists.txt  StringIndex.cpp
src/Trie/: CMakeLists.txt
src/Util/: Bstr.cpp  Bstr.h  CMakeLists.txt  CompressFileUtil.cpp  CompressFileUtil.h  IPBlackList.cpp  IPWhiteList.cpp  PrettyPrint.h  Slog.cpp  Slog.h  Util.cpp  Util.h  VList.cpp
