include_directories( ${INCLUDE_3RD_PATH} )
aux_source_directory( . SRC_LIST )
aux_source_directory( ./ISArray SRC_LIST )
aux_source_directory( ./ISTree SRC_LIST )
aux_source_directory( ./ISTree/heap SRC_LIST )
aux_source_directory( ./ISTree/node SRC_LIST )
aux_source_directory( ./ISTree/storage SRC_LIST )
aux_source_directory( ./IVArray SRC_LIST )
aux_source_directory( ./IVTree SRC_LIST )
aux_source_directory( ./IVTree/heap SRC_LIST )
aux_source_directory( ./IVTree/node SRC_LIST )
aux_source_directory( ./IVTree/storage SRC_LIST )
aux_source_directory( ./SITree SRC_LIST )
aux_source_directory( ./SITree/heap SRC_LIST )
aux_source_directory( ./SITree/node SRC_LIST )
aux_source_directory( ./SITree/storage SRC_LIST )
add_library( kvstore ${SRC_LIST} )